fix(): wrap code lines inside quote blocks

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -116,7 +116,7 @@ article img {
   @apply text-base/7;
 
   code:not(.expressive-code code) {
-    @apply text-sm text-foreground/90 bg-foreground/5 px-2 py-1 rounded-lg whitespace-nowrap;
+    @apply text-sm text-foreground/90 bg-foreground/5 px-2 py-1 rounded-lg wrap-break-word;
   }
 
   & > *:not(div.expressive-code, img, figure, video, hr, blockquote, aside),
